fix search btn gap

--- a/app/frontend/stylesheets/object/component/simple-search.scss
+++ b/app/frontend/stylesheets/object/component/simple-search.scss
@@ -1,6 +1,6 @@
 .simple-search-container {
   display: flex;
-  gap: 1em;
+  gap: 0.25em;
   align-items: center;
 
   > search-button {
